--- a/history.html
+++ b/history.html
@@ -73,13 +73,45 @@
             <ul>
                 <li>
                     <h3>1666</h3>
-                    <p>Piscataway is founded by European settlers.</p>
+                    <p>Piscataway is founded by European settlers, including a group of English colonists from New Haven and Milford, Connecticut, and a group of Dutch and French Huguenot settlers from Staten Island.</p>
+                </li>
+                <li>
+                    <h3>1683</h3>
+                    <p>The first Raritan Landing, a major port and trading center, is established on the Raritan River in Piscataway.</p>
+                </li>
+                <li>
+                    <h3>1701</h3>
+                    <p>The first church in Piscataway, St. James Church, is built.</p>
                 </li>
                 <li>
                     <h3>1777</h3>
-                    <p>George Washington and the Continental Army pass through Piscataway during the Revolutionary War.</p>
+                    <p>George Washington and the Continental Army pass through Piscataway during the Revolutionary War. The area witnesses skirmishes and troop movements.</p>
                 </li>
-                </ul>
+                <li>
+                    <h3>1860</h3>
+                    <p>The Raritan and Delaware Bay Railroad opens a line through Piscataway, connecting the area to New York City and Philadelphia.</p>
+                </li>
+                <li>
+                    <h3>1917</h3>
+                    <p>Camp Kilmer, a major military training camp, is established in Piscataway during World War I. It later serves as a processing center for returning soldiers.</p>
+                </li>
+                <li>
+                    <h3>1950s</h3>
+                    <p>Piscataway experiences significant suburban growth after World War II, with the development of new housing and commercial areas.</p>
+                </li>
+                <li>
+                    <h3>1963</h3>
+                    <p>Rutgers University establishes a campus in Piscataway, which becomes the university's main campus.</p>
+                </li>
+                <li>
+                    <h3>1990s</h3>
+                    <p>Piscataway continues to diversify, with a growing population of immigrants from Asia, Latin America, and other parts of the world.</p>
+                </li>
+                <li>
+                    <h3>Present</h3>
+                    <p>Piscataway is a vibrant and diverse township, home to a mix of residential, commercial, and industrial areas. It continues to evolve and adapt to the changing needs of its residents.</p>
+                </li>
+            </ul>
         </section>
     </main>
 
