--- a/attractions.html
+++ b/attractions.html
@@ -49,13 +49,6 @@
             border-radius: 10px;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
-
-      .attractions-section img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 10px;
-            margin-bottom: 10px;
-        }
     </style>
 </head>
 <body>
@@ -75,15 +68,37 @@
             <ul>
                 <li>
                     <h3>East Jersey Old Town Village</h3>
-                    <img src="https://www.co.middlesex.nj.us/Government/Departments/BDE/PublishingImages/EJOTV%20(2).jpg" alt="East Jersey Old Town Village">
                     <p>Description: Step back in time at East Jersey Old Town Village, a living history museum that recreates life in the 18th century. Explore historic buildings, interact with costumed interpreters, and experience the daily life of early European settlers in New Jersey.</p>
                 </li>
                 <li>
                     <h3>Rutgers Gardens</h3>
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/47/Rutgers_Gardens.JPG/1280px-Rutgers_Gardens.JPG" alt="Rutgers Gardens">
                     <p>Description: Explore the beauty of Rutgers Gardens, a 180-acre botanical garden with diverse plant collections, scenic trails, and educational programs. Enjoy the tranquility of the bamboo forest, admire the colorful flower displays, and learn about sustainable gardening practices.</p>
                 </li>
-                </ul>
+                <li>
+                    <h3>Johnson Park</h3>
+                    <p>Description: Enjoy a day outdoors at Johnson Park, a sprawling park with picnic areas, playgrounds, sports fields, and walking trails. Take a leisurely stroll along the Raritan River, have a family picnic, or enjoy a game of soccer or baseball.</p>
+                </li>
+                <li>
+                    <h3>Piscatawaytown Burial Ground</h3>
+                    <p>Description: Visit the historic Piscatawaytown Burial Ground, the final resting place of many of Piscataway's early settlers. The burial ground dates back to the 17th century and provides a glimpse into the lives of the town's founders.</p>
+                </li>
+                <li>
+                    <h3>The Cornelius Low House</h3>
+                    <p>Description: Explore the elegant Cornelius Low House, a historic mansion built in 1741. The house is now a museum showcasing 18th-century architecture and decorative arts. Take a guided tour and learn about the Low family and their role in Piscataway's history.</p>
+                </li>
+                <li>
+                    <h3>Metlar-Bodine House Museum</h3>
+                    <p>Description: Discover the history of the Metlar-Bodine House Museum, a historic house museum built in the 18th century. The museum features exhibits on local history, decorative arts, and the lives of the families who lived in the house.</p>
+                </li>
+                <li>
+                    <h3>Raritan Center Business Park</h3>
+                    <p>Description: Explore the bustling Raritan Center Business Park, one of the largest industrial parks in the United States. The park is home to a variety of businesses, including warehouses, distribution centers, and manufacturing facilities.</p>
+                </li>
+                <li>
+                    <h3>Piscataway Park</h3>
+                    <p>Description: Enjoy the natural beauty of Piscataway Park, a 5,000-acre park along the Potomac River. The park offers hiking trails, picnic areas, and stunning views of the river. It's also home to a variety of wildlife, including bald eagles and deer.</p>
+                </li>
+            </ul>
         </section>
     </main>
 
