--- a/schools.html
+++ b/schools.html
@@ -90,7 +90,7 @@
                 <li>
                     <h3>Grandview Elementary School</h3>
                     <p>Address: 130 North Randolphville Road, Piscataway Township, NJ 08854</p>
-                    <p>Grades: PreK-3</p>
+                    <p>Grades: K-3</p>
                     <p>Information: Grandview Elementary School offers a comprehensive early childhood and elementary education with a focus on developing foundational skills.</p>
                 </li>
 
