--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
     <header>
         <h1>Welcome to Piscataway</h1>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="history.html">History</a>
-            <a href="schools.html">Schools</a>
-            <a href="attractions.html">Attractions</a>
+            <a href="index">Home</a>
+            <a href="history">History</a>
+            <a href="schools">Schools</a>
+            <a href="attractions">Attractions</a>
         </nav>
     </header>
 
