--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <header>
         <h1>Welcome to Piscataway</h1>
         <nav>
-            <a href="index">Home</a>
+            <a href="">Home</a>
             <a href="history">History</a>
             <a href="schools">Schools</a>
             <a href="attractions">Attractions</a>
